# sophpi-shaolin

./: .gitignore  License  README-zh.md  README.md
AnimateGAN/: common_freeze_script.py  demo_web.py  engine.py  inference.py  requirements.txt  tools.py
AnimateGAN/scripts/: convert_pt_2_bmodel.py  prepare.sh
FALSR/: README.md
FALSR/cpp/: Makefile.arm  Makefile.pcie  bmnn_utils.h  falsr.cpp  falsr.hpp  main.cpp  utils.hpp
FALSR/python/: falsr_scipy.py
FALSR/scripts/: create_lmdb.sh  gen_fp32_bmodel.sh  gen_fp32umodel.sh  gen_int8bmodel.sh  gen_int8umodel.sh  int8u2bmodel.sh  model_info.sh
FALSR/tools/: create_lmdb.py  int8u_to_bmodel.py
Face_recog/: README.md
Face_recog/python/: Face_recogion.py  iou_detect_test.py
Face_recog/scripts/: download_datasets.sh
HRNet-Pose/: README.md
HRNet-Pose/python/: bmodel.py  draw.py  inference.py  make_lmdb.py  postprocess.py  preprocess.py  utils.py
HRNet-Pose/scripts/: download_bmodel.sh  download_from_nas.sh  gen_fp32bmodel.sh  gen_int8bmodel.sh  gen_int8bmodel_fake.sh
ICNet/: icnet_bmodel.py  icnet_test_SE5.py
LSTM/: PC_SE5.docx
LSTM/PC/: PC_LSTM_predict_test.py  PC_LSTM_predict_train.py  ckpt_to_pb.py  lstm_tf_convert.py
LeNet5/: gen_bmodel.py  lenet_test_slp.py
Mask_RCNN/: Mask_RCNN_bmodel.py  Mask_RCNN_pb_inference.py
MiDas/: README.md
Multimedia/bmcv_jpeg_encdec/: CMakeLists.txt
Multimedia/bmcv_jpeg_encdec/src/: jpeg_EncDec.cpp
ResNet/: ResNet18_test_slp.py  resnet18_bmodel.py
YOLO3D/: README.md
reconNet_model/: reconNet_to_bmodel.py  reconnet_model.pb  reconnet_pb_test.py
(+70 files in other folders)
